--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,21 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
   height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: roboto;
 }
-
-.header {
-
-  }
 
 .headerh1 {
   size: 1em;
   line-height: 1.1;
 }
 
-.appDiv {
+.generalInfoDiv, .educationalExperienceDiv {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+}
+
+
+@media screen and (min-width: 601px) {
+  #root {
+    height: 100vh;
+    width: 100vw;
+  }
 }
