--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -13,8 +14,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.root {
-  height: 100vh;
+* {
+  box-sizing: border-box;
 }
 
 a {
